<resources>
    <string name="app_name">Http Server</string>
    <string name="choose_file">Tap to select a folder</string>
    <string name="select">Select</string>
    <string name="ip">IP</string>
    <string name="start_server">Start Server</string>
    <string name="history">History</string>
    <string name="ic_thumb">ic_thumb</string>
    <string name="unknown">Unknown</string>
    <string name="_0b">0B</string>
    <string name="empty_date">--/--/--</string>
    <string name="delete_item">Delete item</string>
    <string name="made_with_by">Developed with 🧠 By</string>
    <string name="ashutosh_mishra">Ashutosh Mishra</string>
    <string name="github_com_ashutosh2706">github.com/ashutosh2706</string>
    <string name="report_bug">Report Bug</string>
    <string name="app_icon">App Icon</string>
    <string name="app_info">App Info</string>
    <string name="menu">Menu</string>
    <string name="version">Version</string>
    <string name="receive_file">Receive File</string>
    <string name="http_server">HTTP Server</string>
</resources>